tests/integration/cfc/snapshots/tests__integration__cfc__validation_tests__jump_with_missing_label_validation.snap
---
source: tests/integration/cfc/validation_tests.rs
expression: diagnostician.buffer().unwrap()
---
error: Could not resolve reference to lbl_x
  ┌─ <internal>.cfc:1:1
  │
1 │ 
  │ ^ Could not resolve reference to lbl_x


